--- a/md/總統府司法改革國是會議相關投書彙整.md
+++ b/md/總統府司法改革國是會議相關投書彙整.md
@@ -50,11 +50,11 @@
 
 # 時瑋辰
 ## backgrounds
-- 其他
+- 法官
 
 ## articles
 ### 2016/05/31 GMT0+8:00 http://www.storm.mg/article/123988
-- <h2><a href="http://www.storm.mg/article/123988" target="_blank">時瑋辰觀點：司法改革沒有時間重蹈覆轍</a></h2><p>總統蔡英文就職時承諾今年10月召開司法國是會議，法務部長邱太三亦緊接著提出由法務部設網站蒐集民怨，再由司法國是會議做出決定，交由常設的司改委員會規劃執行，正面且具體地回應社會對司法改革的呼聲，值得肯定，筆者在此也提出三點意見，希望有助於後續會議的聚焦。</p><p>一、司法改革是一件全民工程。從民間司改會運用開源審議的方式，在「全民司法改革運動」網站至今所蒐集到的意見來看，排名前5的分別是「偵查中的不當報導，造成輿論公審」、「媒體未確實查證做出錯誤報導，傷害司法與當事人」、「受刑人出獄後謀生困難，再犯率高」、「民眾不熟悉司法運作實務，對司法運作方式產生誤解」、「弱勢族群在司法中需要更多協助」，不僅是法官或法院的改革，更涉及檢警、媒體、矯正機關、律師、社會安全網等，是整個社會的龐大改造工程，不能只架個網站、開個會議，而是需要全民的長期對話，且法官群體更應以公民身分主動參與。</p><p>二、司法改革需要從下而上的共識凝聚。前總統馬英九於2012年上台時，也是以司法改革為口號，由司法院推動許多法案及政策。然而，這些多半淪為司法行政高層的作秀。以觀審制為例，在未取得社會共識前即貿然推動多年，花費大筆預算刊登廣告、甚至請藝人代言，今年總統大選時卻被所有候選人否決，證明了只是不顧民意與專業的錯誤政策。結果新國會一上台，立刻推出「陪審法草案」，草案中忽略其他國家陪審制之歷史成因及運作現況，也未納入近2年各地法院實際操作陪審制模擬法庭之經驗，套句立委黃國昌2011年曾用於評論觀審制的話：「再度淪為名不符實的假實驗，最後不是全憑直覺，就是仍由政治利益決定，無異空忙一場。」如果在人民參與審判制度的引進上，新政府都無法按部就班，那注定只是又一場口號改革而已。</p><p>三、司法改革需要納入第一線的真實處境。在審議式民主中，人民要能審慎思辨、凝聚共識，需要充足的資訊作為討論的前提。近年打倒司法威權的行動，未能實質改變審判文化，反而只是將所有壓力由基層法官承擔，使得各地方法院案件量瀕臨崩潰邊緣，難以兼顧各方期待，人民訴訟權益亦因此受損，在前述網站所蒐集的司法問題中，也可看到「法官檢察官案件量負擔大，辦案品質受影響」高居第6。若沒有餘裕去傾聽當事人，想到的只是每日的管考和結案，如何期待符合人性的司法？台灣司法改革的歷史顯示，基層的法官與檢察官是體制內最有能力與意願去改革的，司法國是會議若能思及第一線司法工作者的真實處境，各項結論才有落實的可能。</p><p>蓋洛普（Gallup）公司2013年所作的全球「司法系統與法院的信心」（Confidence in Judicial Systems and Courts）調查顯示，臺灣民眾有信心的比率僅有23%，是亞洲國家中最低（該調查因政治因素而未在某些國家進行，如中國），甚至低於歷經戰亂的阿富汗，再再地顯示臺灣司法已千瘡百孔。司法改革應該納入第一線的真實處境、從下而上凝聚共識、才有機會完成這件全民工程，司法威權的轉型及司法信任的建立才有可能，我們已經沒有時間重蹈覆轍了。</p><p>＊作者為台中地方法院法官</p> #時瑋辰 #其他 #議事程序 #風傳媒 #2016-05-31
+- <h2><a href="http://www.storm.mg/article/123988" target="_blank">時瑋辰觀點：司法改革沒有時間重蹈覆轍</a></h2><p>總統蔡英文就職時承諾今年10月召開司法國是會議，法務部長邱太三亦緊接著提出由法務部設網站蒐集民怨，再由司法國是會議做出決定，交由常設的司改委員會規劃執行，正面且具體地回應社會對司法改革的呼聲，值得肯定，筆者在此也提出三點意見，希望有助於後續會議的聚焦。</p><p>一、司法改革是一件全民工程。從民間司改會運用開源審議的方式，在「全民司法改革運動」網站至今所蒐集到的意見來看，排名前5的分別是「偵查中的不當報導，造成輿論公審」、「媒體未確實查證做出錯誤報導，傷害司法與當事人」、「受刑人出獄後謀生困難，再犯率高」、「民眾不熟悉司法運作實務，對司法運作方式產生誤解」、「弱勢族群在司法中需要更多協助」，不僅是法官或法院的改革，更涉及檢警、媒體、矯正機關、律師、社會安全網等，是整個社會的龐大改造工程，不能只架個網站、開個會議，而是需要全民的長期對話，且法官群體更應以公民身分主動參與。</p><p>二、司法改革需要從下而上的共識凝聚。前總統馬英九於2012年上台時，也是以司法改革為口號，由司法院推動許多法案及政策。然而，這些多半淪為司法行政高層的作秀。以觀審制為例，在未取得社會共識前即貿然推動多年，花費大筆預算刊登廣告、甚至請藝人代言，今年總統大選時卻被所有候選人否決，證明了只是不顧民意與專業的錯誤政策。結果新國會一上台，立刻推出「陪審法草案」，草案中忽略其他國家陪審制之歷史成因及運作現況，也未納入近2年各地法院實際操作陪審制模擬法庭之經驗，套句立委黃國昌2011年曾用於評論觀審制的話：「再度淪為名不符實的假實驗，最後不是全憑直覺，就是仍由政治利益決定，無異空忙一場。」如果在人民參與審判制度的引進上，新政府都無法按部就班，那注定只是又一場口號改革而已。</p><p>三、司法改革需要納入第一線的真實處境。在審議式民主中，人民要能審慎思辨、凝聚共識，需要充足的資訊作為討論的前提。近年打倒司法威權的行動，未能實質改變審判文化，反而只是將所有壓力由基層法官承擔，使得各地方法院案件量瀕臨崩潰邊緣，難以兼顧各方期待，人民訴訟權益亦因此受損，在前述網站所蒐集的司法問題中，也可看到「法官檢察官案件量負擔大，辦案品質受影響」高居第6。若沒有餘裕去傾聽當事人，想到的只是每日的管考和結案，如何期待符合人性的司法？台灣司法改革的歷史顯示，基層的法官與檢察官是體制內最有能力與意願去改革的，司法國是會議若能思及第一線司法工作者的真實處境，各項結論才有落實的可能。</p><p>蓋洛普（Gallup）公司2013年所作的全球「司法系統與法院的信心」（Confidence in Judicial Systems and Courts）調查顯示，臺灣民眾有信心的比率僅有23%，是亞洲國家中最低（該調查因政治因素而未在某些國家進行，如中國），甚至低於歷經戰亂的阿富汗，再再地顯示臺灣司法已千瘡百孔。司法改革應該納入第一線的真實處境、從下而上凝聚共識、才有機會完成這件全民工程，司法威權的轉型及司法信任的建立才有可能，我們已經沒有時間重蹈覆轍了。</p><p>＊作者為台中地方法院法官</p> #時瑋辰 #法官 #議事程序 #風傳媒 #2016-05-31
 
 # 孫斌
 ## backgrounds
@@ -666,7 +666,7 @@
 
 ## articles
 ### 2017/02/21 GMT0+8:00 http://talk.ltn.com.tw/article/paper/1079878
-- <h2><a href="http://talk.ltn.com.tw/article/paper/1079878" target="_blank">社論》如何使司法不令人心生恐懼？</a></h2><p>司法改革國是會議分組會議，昨天正式展開。這項集龐大、複雜、專業於一身的改革與轉型，是一九九九年「全國司法改革會議」之後，未竟工程的重新啟動，然坊間卻有最新民調顯示高達五成的受訪者對於是否能完成改革缺乏信心，可見大眾對司法人員與司法制度的信賴低落與悲觀程度，誠為國家的不幸，而這，也更加凸顯了這次司法改革勢在必成的嚴肅性。</p><p>司法改革國是會議分組會議，昨天（20日）正式展開。（資料照，記者黃耀徵攝）</p><p>十八年前的那回司改，在李登輝時代，邀集了一百多人，開了三天會，做成了三十二項決議，但事後鮮少獲致貫徹執行，因此為法界普遍定義是一次失敗的會議。今天蔡英文政府決定回應民意捲土重來，需要很大的勇氣；但是由於年金改革的殘局尚未完全收拾，司法官退養金問題也在變革之列，兩件原本困難度就很高的問題交纏在一起，益添形勢的嚴峻。在這種情況下，開誠布公、相忍為國、達成共識，是國人對於全體與會者必然的要求與期許。</p><p>因為，早在分組會議舉行之前，僅是就委員組成是如何產生的程序問題，已經讓外界看到各股不同的勢力在進行激烈角力，其錙銖必較的互不相讓，並且透過媒體企圖操作輿論走向的斧痕至深，在在顯示司改這麼多年來之所以知易行難，其實都在於人的問題，人的素質、利害、偏好往往成為掩蓋本質的障礙，這次改革要有所突破的關鍵，也在於此。</p><p>理想狀態中，體制內的改革，包括司法院與法務部，以及國是會議這類體制外的改革，互不衝突。前者在新的主官領導下，若能迅速進行制度變革相對單純的議題，應該隨時推動修法加速改正，不應受國是會議的召開而延宕；至於後者，則宜專注處理整個司法體制全面性的檢討與建構，或是受限體制內各有本位而窒礙難行的部分，才能真正達到引進外力平衡內力、而又不致治絲益棼的目的。</p><p>在分組會議開動，六月底召開國是會議全體會議確立改革版本的時程規劃下，有幾個原則應是社會的共識：首先，檢察體系與法官體系「有權無責」的根本性弊端，必須有效處理。相對於檢察官可以入人於罪，法官得判人生死的無上權力，現有制度對檢察官與法官的課責機制薄弱到幾近為零，可以說比總統還威風，總統還得面對任期選舉、甚至期中選舉的選票壓力，最多八年也要下台，而法官為終身職，群體表現卻始終未能累積出等同的社會敬崇，這是最令人心生恐懼之處，司法改革要讓人民有感，這個首要疑慮必須先加以解除。</p><p>其次，則是檢察官與法官的退場機制必須發揮功能。二○一一年七月公告的法官法，雖設有法官評鑑專章，檢察官的評鑑也有條文規範，實施至今已經超過六年半，檢察官與法官的退場形同虛設，是不爭的事實，曾經有大法官評論：全國最不守法的恐怕就是檢察官與法官，這說法可能過於武斷，但是司法官的防腐、汰弊與懲戒，需要有更健康的制度安排，毫無疑問是獲取社會信任很要緊的配套。</p><p>第三，司法官的養成，要走向開明、進步與國際接軌。目前，檢察官、法官經過司法官特考及格後，是到法務部司法官學院接受兩年的職前訓練，而司法院的法官學院，則辦理法官的在職進修。台灣民主化二十餘年，社會風貌與價值的蛻變，不斷在加速度演化，而司法官遭到疑慮的各種顏色、政黨標籤，卻一直難以盡除，無法建立我心如秤、不偏不倚的基本判準與公正形象，原因何在？有地方法院法官直指：「司法人的養成訓練，用二年讓你忘記在學校四年、八年學的東西，非常成功」，這說法，讓司法官學院的定位、師資與內容，顯然都面臨了無可迴避的檢討。</p><p>在健全的民主社會中，透過監督與制衡，構成權力的平衡，不可能容許任何令人心生恐懼的國家機器存在；這樣的懷疑，甚至連一絲都不該有。如果，我們的司法無法揮去這樣的陰影，當然是台灣之恥。</p> #自由時報社論 #其他 #司法官養成 #司法官退場機制 #議事程序 #自由時報 #2017-02-21
+- <h2><a href="http://talk.ltn.com.tw/article/paper/1079878" target="_blank">社論》如何使司法不令人心生恐懼？</a></h2><p>司法改革國是會議分組會議，昨天正式展開。這項集龐大、複雜、專業於一身的改革與轉型，是一九九九年「全國司法改革會議」之後，未竟工程的重新啟動，然坊間卻有最新民調顯示高達五成的受訪者對於是否能完成改革缺乏信心，可見大眾對司法人員與司法制度的信賴低落與悲觀程度，誠為國家的不幸，而這，也更加凸顯了這次司法改革勢在必成的嚴肅性。</p><p>司法改革國是會議分組會議，昨天（20日）正式展開。（資料照，記者黃耀徵攝）</p><p>十八年前的那回司改，在李登輝時代，邀集了一百多人，開了三天會，做成了三十二項決議，但事後鮮少獲致貫徹執行，因此為法界普遍定義是一次失敗的會議。今天蔡英文政府決定回應民意捲土重來，需要很大的勇氣；但是由於年金改革的殘局尚未完全收拾，司法官退養金問題也在變革之列，兩件原本困難度就很高的問題交纏在一起，益添形勢的嚴峻。在這種情況下，開誠布公、相忍為國、達成共識，是國人對於全體與會者必然的要求與期許。</p><p>因為，早在分組會議舉行之前，僅是就委員組成是如何產生的程序問題，已經讓外界看到各股不同的勢力在進行激烈角力，其錙銖必較的互不相讓，並且透過媒體企圖操作輿論走向的斧痕至深，在在顯示司改這麼多年來之所以知易行難，其實都在於人的問題，人的素質、利害、偏好往往成為掩蓋本質的障礙，這次改革要有所突破的關鍵，也在於此。</p><p>理想狀態中，體制內的改革，包括司法院與法務部，以及國是會議這類體制外的改革，互不衝突。前者在新的主官領導下，若能迅速進行制度變革相對單純的議題，應該隨時推動修法加速改正，不應受國是會議的召開而延宕；至於後者，則宜專注處理整個司法體制全面性的檢討與建構，或是受限體制內各有本位而窒礙難行的部分，才能真正達到引進外力平衡內力、而又不致治絲益棼的目的。</p><p>在分組會議開動，六月底召開國是會議全體會議確立改革版本的時程規劃下，有幾個原則應是社會的共識：首先，檢察體系與法官體系「有權無責」的根本性弊端，必須有效處理。相對於檢察官可以入人於罪，法官得判人生死的無上權力，現有制度對檢察官與法官的課責機制薄弱到幾近為零，可以說比總統還威風，總統還得面對任期選舉、甚至期中選舉的選票壓力，最多八年也要下台，而法官為終身職，群體表現卻始終未能累積出等同的社會敬崇，這是最令人心生恐懼之處，司法改革要讓人民有感，這個首要疑慮必須先加以解除。</p><p>其次，則是檢察官與法官的退場機制必須發揮功能。二○一一年七月公告的法官法，雖設有法官評鑑專章，檢察官的評鑑也有條文規範，實施至今已經超過六年半，檢察官與法官的退場形同虛設，是不爭的事實，曾經有大法官評論：全國最不守法的恐怕就是檢察官與法官，這說法可能過於武斷，但是司法官的防腐、汰弊與懲戒，需要有更健康的制度安排，毫無疑問是獲取社會信任很要緊的配套。</p><p>第三，司法官的養成，要走向開明、進步與國際接軌。目前，檢察官、法官經過司法官特考及格後，是到法務部司法官學院接受兩年的職前訓練，而司法院的法官學院，則辦理法官的在職進修。台灣民主化二十餘年，社會風貌與價值的蛻變，不斷在加速度演化，而司法官遭到疑慮的各種顏色、政黨標籤，卻一直難以盡除，無法建立我心如秤、不偏不倚的基本判準與公正形象，原因何在？有地方法院法官直指：「司法人的養成訓練，用二年讓你忘記在學校四年、八年學的東西，非常成功」，這說法，讓司法官學院的定位、師資與內容，顯然都面臨了無可迴避的檢討。</p><p>在健全的民主社會中，透過監督與制衡，構成權力的平衡，不可能容許任何令人心生恐懼的國家機器存在；這樣的懷疑，甚至連一絲都不該有。如果，我們的司法無法揮去這樣的陰影，當然是台灣之恥。</p> #自由時報社論 #其他 #第三組 #司法官養成 #司法官退場機制 #議事程序 #自由時報 #2017-02-21
 
 # 白忠志
 ## backgrounds
@@ -1272,6 +1272,14 @@
 ### 2017/03/06 GMT0+8:00 http://www.upmedia.mg/news_info.php?SerialNo=13204
 - <h2><a href="http://www.upmedia.mg/news_info.php?SerialNo=13204" target="_blank">投書：從法院經驗談人民的司法想像</a></h2><p>生病要看醫生，看醫生之前，能夠自我療癒就順其自然，原因主要有二，一怕麻煩，再來還是討厭麻煩。選擇小診所，擔心醫師不厲害，不能一次治癒。若要大醫院找名醫，掛號要等，到院後還是要等，等到病情加重，才會認輸，乖乖找醫生診治。</p><p>法院不同醫院，不能強忍或拖延等待，第一次接觸經驗，強烈關聯往後對於司法的感受與印象。</p><p>遇到官司訴訟，民眾一般心理，常抱持多一事不如少一事。除非當被告，不得不跑法院搞清楚狀況，要不然，醫院與法院，少去就是幸福平安。</p><p>收到法院傳票，不管紅的、黑的、青的，鮮紅關防印在紙上，無論被告或告人，心中當然有相對應的壓力。尤其刑事案件，若是不知因何故、為何事而被告，難免心中忐忑，到了檢察署，還想著檢察官會不會抓人去關。</p><p>電視新聞偏愛羈押、重金交保的大案件，以致於人民普遍想像，哪天換我去檢察署，尤其當被告時，是不是也會這樣嚴重。即便沒有大場面，聽說偵查不公開，關在偵查庭裡，檢察官會不會對我怎樣。</p><p>根據2016年司法院「一般民眾對司法認知調查報告」，成功訪問5265位民眾，加權後，只有1466位民眾到過法院，比例僅為27.8%。其中僅有282位在一年內去過法院(約佔5.4%)，足見民眾拜訪法院經驗，顯然少之又少。</p><p>在此現象下，84.1%民眾瞭解法官隸屬於司法院，但對於檢察官隸屬行政院，僅有24.2%民眾答對(62.5%民眾誤認檢察官隸屬於司法院)。足見檢察署名稱之前的「○○法院」，很容易誤導民眾，以為檢察官與法官都是司法院體系。</p><p>上開調查結果也顯示民眾主要從電視、網際網路、報紙、親友(家人、朋友、熟人)獲得司法相關資訊。因此，電視報導不完整、網際網路謠言散布，很容易讓民眾對司法產生誤解甚至壞印象。要說「恐龍法官」是由媒體與鄉民共同創造，是有道理與必然。</p><p>要對司法產生具體經驗與感受，法庭活動一定是必要又充分的條件。當檢察官問完年籍資料，又問是不是原住民的時候，有些民眾可能認為檢察官是不是歧視人，把自己當成次等公民。民事庭法官問起請求權的時候，沒有法律訓練的普羅大眾，說不定就直接回答「請求被告賠償」等等。</p><p>民眾鴨子聽雷，要不然答非所問，法庭上的檢察官或法官，如果沒有耐心與好脾氣，恐怕霹靂啪啦念個不停。法庭活動若是不止一個案件，訊問也會疲累，一旦檢察官或法官忘記重開機，累積下來的脾氣與疲累，恐怕就在不經意之間，傷害了人民感情，損害了司法信賴。</p><p>「速食心態」求快、求好，適用於找醫生看病，也可套用於法院經驗。一般民眾希望官司儘早確定，有結果可以放心、安心。檢察官、法官手上案件很多，每個案件若都要即到即辦甚至立刻有結果，恐怕全國司法官或是過勞暴斃，或是糾紛更多，人民對於司法更不滿意。</p><p>死刑或數百萬以上的官司，若像看醫生一樣，問診後就開藥或醫治，開完庭就立刻知道判決結果，鐵定比大樂透開獎還刺激。這種刺激在實務上做不到，當事人未必有足夠強的心臟來應對。花費時間等待官司結果，雖然違反「速食心態」的人性原則，但是不得不配合。因為訴訟結果，最終要面對國家公權力的決定，本質就是嚴肅與謹慎。</p><p>檢察官、法官與人民之間，除了法律專業不對等，對於事實的爭執與認定，也是資訊不對稱。法官與檢察官訊問案情，不可能回到過去，也不能當成人體監視器，所有事實細節不能浮現眼前與腦海。專業素養與事實認知不對等，法庭活動繞在這兩項資訊不對稱糾纏亂結，這是司法不完美的先天宿命。</p><p>據聞包青天能夠下地府訊問被害死者，也能夢到過去事實發生狀況，這在司法領域裡，絕對是不可能的任務。想對法官或檢察官拼命說出自認的事實，但是坐在庭上的檢察官或法官，卻未必想要聆聽這些被認知為瑣碎、無關緊要的喋喋不休。</p><p>人民對於司法官沒有同理心，不能理解專業運作與能力有限的現實競合。司法官對於人民也沒有同理心，本位為主的傳統養成，不僅違反人性而限於封閉、極度專注，也讓司法官長期浸淫於磁場不佳的工作氛圍，身心受到嚴重污染而忘記紓壓排毒。</p><p>人民對於司法信賴，始於法庭活動，終於訴訟結果。司改若要觸及人民正面有感，解決兩項資訊不對稱，讓司法官的專業素養與人民認知事實之間搭起公平正義的橋樑，這就是司改令人感動的關鍵。</p><p>※作者為自由作家</p> #林青弘 #其他 #第四組 #司法與人民脫節 #上報 #2017-03-06
 
+# 劉一德
+## backgrounds
+- 其他
+
+## articles
+### 2017/03/06 GMT0+8:00 http://talk.ltn.com.tw/article/breakingnews/1994563
+- <h2><a href="http://talk.ltn.com.tw/article/breakingnews/1994563" target="_blank">自由開講》德國為鑑 司法改革關鍵不在監察權 在「司法人事除垢」</a></h2><p>劉一德</p><p>針對監委被提名人陳師孟表示，「民進黨政府除了追究二二八事件元兇外，應該清楚認知，阻擋轉型正義的元兇是誰；威權時代冤案、冤獄，至今未平反，不當黨產歸零工程處處受阻，元兇就是目前還盤據在司法體系，受黨國餘緒毒化的不肖司法官。司法應是社會正義最後一道防線，但在威權時代，變成打壓社會正義的最後一個磚頭，至今仍是保守反動勢力的最後防線。監察權如得以順利行使，將提供司法敗類退場的機制」，然而此一說法，只對了一半。</p><p>監委被提名人陳師孟。（資料照，記者叢昌瑾攝）</p><p> 事實是，《法官法》上路多年來，品操不良、具黨國復闢思維和恐龍司法官早已一一現形。但問題是司法官被揭露後，退場機制啟動主導權仍在司法巨塔內，即使啟動，還必須經法官評鑑委員會、監院調查、彈劾、移送職務法庭調查、審理，程序漫長，評鑑結果不公開，最後決定權還是在法官所組成的職務法庭，然而，職務法庭官官相護，反成司法官退場保護機制，致使至今，不良司法官退場效果不彰。所以監察權是否順利行使，並非司法敗類退場的關鍵。</p><p> 我國應參考德國的轉型正義。兩德統一後，德國政府認為，司法與公務體系中仍充斥著曾任或曾與東德威權政權積極合作、且仍具有共黨思想者。因此，德國聯邦與邦層級政府各自針對司法界人事開始進行系統性的除垢工作。蓋因司法官威權保守思想猶存，即便改變司法制度，仍不能從根解決司法陳苛。例如薩克森邦公務員法第四條即規定，公務人員、法官、國營事業員工，過去如曾主動或被動為東德國安部工作，或擔任線民者，均不得再擔任公職；且推定曾在東德政黨或人民團體擔任重要職務者，原則上均不具備擔任公職所需之人格特質，均不得再擔任公職。</p><p> 準此，此次司法改革的重點應擺在落實「司法界人事除垢」工作，除了修正現行法官法讓品操不良和恐龍司法官退場機制更加落實，且有效能之外，亦應修正法官法，可以明定一九八七年七月十五日解嚴日為界線，凡解嚴前取得司法官資格擔任司法官，至今仍從事司法官職務者，一律推定為不具備擔任司法官所需之人格特質，暫時解職。俟重新加以訓練，以洗滌埋藏在其腦中之黨國威權及保守反動思維，並通過考核後，再恢復其職。</p><p>（作者為台灣團結聯盟主席）</p><p>自由開講》是一個提供民眾對話的電子論壇，不論是對政治、經濟或社會、文化等新聞議題，有意見想表達、有話不吐不快，都歡迎你熱烈投稿。文長700字內為優，來稿請附真實姓名（必寫。有筆名請另註）、職業、聯絡電話、E-mail帳號。本報有錄取及刪修權，不付稿酬；錄用與否將不另行通知。投稿信箱：LTNTALK@gmail.com</p> #劉一德 #其他 #轉型正義 #評鑑制度 #自由時報 #2017-03-06
+
 # 盧禮賓
 ## backgrounds
 - 其他
@@ -1398,7 +1406,7 @@
 
 ## articles
 ### 2017/03/08 GMT0+8:00 http://talk.ltn.com.tw/article/paper/1083973
-- <h2><a href="http://talk.ltn.com.tw/article/paper/1083973" target="_blank">自由談》有錢判生無錢判死</a></h2><p>監察委員補提名人陳師孟上週在總統府召開的記者會上，語出驚人地批判司法至今仍然是保守反動勢力的最後防線，「監察權如得以順利行使，將是提供司法敗類退場的機制。」壯哉斯言！這位一路走來始終如一的「老綠男」，如何行使糾彈權掃滌司法的髒垢，令人期待。</p><p>蔡英文總統去年就職演說提到司法改革，獲得如雷的掌聲，這不是蔡英文的演說內容有多精彩，也不是蔡英文多會演說，而是司法改革備受國人期待，希望司法清明能進一步提升台灣的民主國力；目前「司法改革國是會議」正進行各分組會議，蔡英文在司改國是會議籌備會議也「期許」司法不要發生「有錢判生，無錢判死」的情況，顯見政府對於司法也有急迫感。</p><p>但是保守的司法界仍未能完全回應民眾的期待。蔡英文一講話，法官協會立刻發表聲明，質疑總統向世界宣判了台灣司法「死刑」！檢察官協會，以及諸多個別的法官和檢察官也百家爭鳴，強力為現行的司法制度與「公信力」辯護。</p><p>蔡英文一講話，法官協會立刻發表聲明，質疑總統向世界宣判了台灣司法「死刑」！檢察官協會，以及諸多個別的法官和檢察官也百家爭鳴，強力為現行的司法制度與「公信力」辯護。（資料照，記者黃耀徵攝）</p><p>台灣的法官和檢察官雖受過嚴謹的教育和訓練，但這套訓練制度卻是「威權體制」下的產物，早應該改弦易轍，採行民主多元的任用機制；而說起「官官相護」，台灣已多次政黨輪替，法界卻仍維持一元體系，現在的司法界比起政治界官官相護尤其嚴重。這也是陳師孟批判司法是阻擋台灣轉型正義，以及司法仍是保守反動勢力的最後防線之所在。</p><p>法官和檢察官要做的，除了窮盡一切可能，戮力於「發現真實」和實踐「公平正義」的訴訟程序，還必須建立一套受到人民信賴的退場評鑑制度。唯有司法界建立掃除敗類的基準，並獲得人民信任，外界的風雨譏評才能終止。</p><p>司法權要自救，監察權也可以助一臂之力，就讓「陳師孟們」好好地監督司法官，或許會有一番新的局面。（陳杉榮）</p> #陳杉榮 #其他 #有錢判生無錢判死 #自由時報 #2017-03-08
+- <h2><a href="http://talk.ltn.com.tw/article/paper/1083973" target="_blank">自由談》有錢判生無錢判死</a></h2><p>監察委員補提名人陳師孟上週在總統府召開的記者會上，語出驚人地批判司法至今仍然是保守反動勢力的最後防線，「監察權如得以順利行使，將是提供司法敗類退場的機制。」壯哉斯言！這位一路走來始終如一的「老綠男」，如何行使糾彈權掃滌司法的髒垢，令人期待。</p><p>蔡英文總統去年就職演說提到司法改革，獲得如雷的掌聲，這不是蔡英文的演說內容有多精彩，也不是蔡英文多會演說，而是司法改革備受國人期待，希望司法清明能進一步提升台灣的民主國力；目前「司法改革國是會議」正進行各分組會議，蔡英文在司改國是會議籌備會議也「期許」司法不要發生「有錢判生，無錢判死」的情況，顯見政府對於司法也有急迫感。</p><p>但是保守的司法界仍未能完全回應民眾的期待。蔡英文一講話，法官協會立刻發表聲明，質疑總統向世界宣判了台灣司法「死刑」！檢察官協會，以及諸多個別的法官和檢察官也百家爭鳴，強力為現行的司法制度與「公信力」辯護。</p><p>蔡英文一講話，法官協會立刻發表聲明，質疑總統向世界宣判了台灣司法「死刑」！檢察官協會，以及諸多個別的法官和檢察官也百家爭鳴，強力為現行的司法制度與「公信力」辯護。（資料照，記者黃耀徵攝）</p><p>台灣的法官和檢察官雖受過嚴謹的教育和訓練，但這套訓練制度卻是「威權體制」下的產物，早應該改弦易轍，採行民主多元的任用機制；而說起「官官相護」，台灣已多次政黨輪替，法界卻仍維持一元體系，現在的司法界比起政治界官官相護尤其嚴重。這也是陳師孟批判司法是阻擋台灣轉型正義，以及司法仍是保守反動勢力的最後防線之所在。</p><p>法官和檢察官要做的，除了窮盡一切可能，戮力於「發現真實」和實踐「公平正義」的訴訟程序，還必須建立一套受到人民信賴的退場評鑑制度。唯有司法界建立掃除敗類的基準，並獲得人民信任，外界的風雨譏評才能終止。</p><p>司法權要自救，監察權也可以助一臂之力，就讓「陳師孟們」好好地監督司法官，或許會有一番新的局面。（陳杉榮）</p> #陳杉榮 #其他 #有錢判生無錢判死 #轉型正義 #自由時報 #2017-03-08
 
 # 陳逸南
 ## backgrounds
@@ -1916,14 +1924,6 @@
 ### 2017/03/16 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170316/1077021/
 - <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170316/1077021/" target="_blank">【司改交鋒】林達專欄：新設毒品法庭 翻轉毒品政策</a></h2><p>林達／台北地檢署檢察官  </p><p>我國對於施用毒品犯的司法處遇有三軌，第一軌是送短期勒戒，第二軌是緩起訴戒癮治療，第三軌是送監獄。這三軌程序複雜，且無法互相轉換，加上各機關互不隸屬，導致戒毒成效低落，前兩軌快要變成擺設，最後都奔向第三軌發監執行。如果再不改革，蓋再多的監獄也無法容納。</p><p>我曾訪談一位觀察勒戒的初犯，他告訴我，入勒戒所以前只認識一個藥頭，入所以後認識8個，大家關在一起每晚圍圈聊毒品比價格分享藥效，他出所後隔天就立刻約了6個「同學」一起施用。還有好幾位勒戒所的毒犯告訴我，他們被醫生打分數有上癮傾向，就要繼續戒治一年，但到底依據甚麼標準也不知道，申訴也沒有用，最可恨的是這筆評估費還要自己出，自己給自己挖墳墓。</p><p>緩起訴戒癮治療的毒犯則比較幸運，可以在家生活，定期門診就好。但是能獲得檢察官給予緩起訴的只是少數，因為大部分檢察官認為戒癮效果不佳，直接起訴判刑比較快。就算給他機會，戒癮治療期間又經常再犯被抓，檢察官直覺戒癮已經失敗，又會直接起訴判刑。</p><p>醫院方面，許多醫師對此類毒犯經常不配合醫療也感到頭痛，且既無補助、無健保，又無給藥的情況下，對醫院的收入亦難有挹注，也導致治療品質參差不齊。而且，社工和個案管理師在這個階段也難以實際參與，漂亮的「毒品金三角」聯繫會議其實都在確認報表傳送。最嚴重的是，檢察官與醫師之間缺乏聯繫，個案再犯就是中止治療，直接起訴判刑，醫生感到挫折，檢察官對治療更無信心，更堅定選擇起訴判刑。長期惡性循環，實證研究也難以展開。</p><p>觀察勒戒後再犯，與緩起訴戒癮治療中再犯，幾乎都再度進入監獄。但司法體系對於毒癮的認識，許多人仍活在林則徐的時代。包括我在緝毒組工作期間，總覺得你為何要再吸毒，你應該努力戒掉，我已經給你機會卻不珍惜，所以直接起訴判刑。但在我執行科期間訪談上百位個案以後，幾乎顛覆了我原本的認知，我建議承辦緝毒的檢察官，如果可以親身訪談30個吸毒犯以上，就會有全然不同的視野。</p><p>毒癮是一種生理和心理疾病的現象，海洛因的生理成癮性極強，能靠自力戒除的我只見過一個。有一個女生告訴我，她一天不用會非常難受，全身發癢、流鼻水打噴嚏、從骨頭關節裡面痠出來，撐愈久愈難受，根本無法忍受，但只要再用一點點海洛因，就可以瞬間解開這所有難受，這個情況稱為戒斷症狀。一般而言，要撐7天才會度過。</p><p>我所認識唯一靠自力關在家裡度過7天的那位，因為哥哥在北京販毒遭槍斃，震撼之下閉關斷除，他現在生意做得很好，是我所見過少數擁有極強大意志力的人。你可以試著想像，把你的腳雙盤連續7天不准放下來，你撐得過嗎？如果你中途會把腳放下來，那其實你也是再犯了。</p><p>安非他命的生理成癮性較弱，但心理成癮性極強，當你使用過一次以後，你會永遠記得那一次的感受，從此你會不斷追尋那一次感受，那是一種無止盡的懷念與聯想。但是，每次用毒會破壞你的大腦。當大腦遭到破壞以後，每次施用都再也無法達到第一次的強度，所以你以為用量不夠，但加量還是衝不滿，你還怪這批貨純度不好，其實是你的腦壞掉了。安非他命使用者也有不同類別，有的是為了工作提神，有的是為了逃避壓力，有的是只要無聊就用。如果你是因為無聊就會用的人，正代表你已經上癮，因為你的大腦慾望系統已經破壞，快樂刺激反應也毀損了。</p><p>上癮，是一種複雜的生理和心理現象。會再犯，是成癮疾病的典型反應。戒癮治療的目標，並不是保證不會再犯，而是降低使用頻率，並且盡量健康復歸社會。儘管法務部、高檢署從去年起，已經通令各地檢署，對於戒癮治療再犯應該詢問醫師意見，盡量給予寬容，但是實務運作卻很難改變，因為檢察官在龐大案件壓力下選擇起訴是自然的結果，法院收到這種案件也只有判刑一途，別無選擇，最後導致的是監獄爆滿。</p><p>各地檢署目前給予毒犯緩起訴戒癮治療的比例，僅佔全部毒犯約6至10%不等，由於許多現實問題導致這個數字難以提高。近來法務部努力鼓勵檢察官多做緩起訴戒癮治療，但畢竟有極限。數年前，法務部曾政策指示各地檢應提升緩起訴戒癮治療人數達總人數的12%，檢察官只要做一件緩起訴就可以折抵一件偵案，當年的政策誘因果然衝上12%。但隨之而來的，是大量的再犯與撤銷緩起訴。那一代的檢察官都形成了一個共同的記憶，緩起訴戒癮治療無效。</p><p>其實，並不是緩起訴戒癮治療無效，而是治療無效的定義錯誤。更嚴重的是，這不可能單靠檢察體系衝高案量來解決，必須靠後端的觀護人、醫療體系、社工體系、就業輔導體系完善配套。但是，後端的整合卻又在其他行政部門事權切割與相互推諉下，走到困境，而所有人也都在挫折之中，承擔立法委員的空言指責，更加退卻。</p><p>觀察勒戒和緩起訴戒癮治療都已經走到困境，大量吸毒案件只好走向起訴。法院照理說也判決緩刑戒癮治療，但實務上一件都沒有。因為，司法院與行政部門不相統屬，各法院也沒有跟醫療機構簽訂合約，所以法官毫無彈性空間，只能通通判刑去關。而且，在一次施用一罪一罰的情況下，法院判決刑度不斷累加，更惡化監獄負擔。</p><p>這種種現象，其實呈現兩個大問題：第一，龐大案量壓力下，每個法官和檢察官須同時應付各類不同案件，吸毒案件因為輕微會被排擠，根本不會考慮個案如何復歸社會，一律推向監獄。第二，機關聯繫不足下，法官、檢察官、觀護人、醫師、社工、個案管理師、就業輔導單位等互相割裂，各人自掃門前雪，每個人都努力，每個人都喊累，但是一點效果都沒有，只有愈來愈多的報表。</p><p>最慘的是，當行政院把毒品防制會報拉高到最高層級，每三個月開會，各機關在恐懼懲處責難的情況下，只能強調本機關表現卓越，我的環節絕無問題。既然每個環節都沒有問題，怎麼會毒品日益氾濫？歷任行政院長聆聽每一位閣員呈報卓越績效時，也只能束手無策，宣示加強緝毒。</p><p>我思考此問題多年，認為新設毒品法庭，是有效扭轉這個局面的最佳方案。毒品法庭類似少年法庭，在美國和澳洲已有施行，由專庭法官主導，以個案為中心，而不再是以各機關本位為設計，由醫師或專業人員對個案進行最適評估，由檢察官監督與觀護人輔導下，分別給予戒癮治療、短期戒治隔離或監禁徒刑，並可搭配社會勞動或輔導就業，甚至設立酬賞回饋機制，積極鼓勵復歸社會。法官主導的用意，是基於人身自由監禁處分必須由法官裁判的效率設計。</p><p>毒品法庭也應該配合《毒品危害防制條例》的修正，將目前繁複的聲請觀察勒戒、強制戒治裁定、抗告、緩起訴戒癮治療、撤銷緩起訴、起訴、初犯與再犯檢查、一罪一罰、累犯、定執行刑程序，全部統合彈性簡化，不僅可以讓專庭法官下達最適合個案的司法處遇，又可透過專業分流讓整體司法效能提升，更可開始培養戒毒實務人才，並且在醫學統計下展開實證研究，精進研發新的戒毒療程與課程。</p><p>新設毒品法庭是最省錢省力，最有效聯繫各院部會，以個案為中心的管理方案。法院和檢察機關也可以進行專業分工，讓熟練者更加熟練，監獄人口也可以透過轉向措施逐漸降低。</p><p>今天毒品的司法處遇已經快到窮途末路，將愷他命升為二級或把三級毒品入罪都不能長遠解決問題。我誠摯希望本次司改國是會議，從毒品程序法、毒品實體法徹底改制。我也建議，勇敢新設毒品法庭，作為翹動毒品困境與行政僵局的第一根槓桿。</p><p>更多林達文章</p> #林達 #檢察官 #第五組 #毒品 #蘋果日報 #2017-03-16
 
-# 林青弘
-## backgrounds
-- 其他
-
-## articles
-### 2017/03/16 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170316/1077447/
-- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170316/1077447/" target="_blank">【司改交鋒】林青弘專欄：解盲司法改革 建構五角對等</a></h2> #林青弘 #其他 #議事程序 #蘋果日報 #2017-03-16
-
 # 尤伯祥
 ## backgrounds
 - 律師
@@ -1931,6 +1931,38 @@
 ## articles
 ### 2017/03/16 GMT0+8:00 http://www.ettoday.net/news/20170316/885072.htm
 - <h2><a href="http://www.ettoday.net/news/20170316/885072.htm" target="_blank">尤伯祥／省錢司改，跟著德國這樣做就對了！</a></h2><p>▲為解決檢察官人力荒，達到省錢司改，可仿效德國的做法。（Photo by gil4r56y／Flicker／示意圖）</p><p>根據中時電子報106年3月13日〈防濫訴學德國無關公益轉自訴〉的報導，由於現行的告訴制度免費，於是好訟之徒動輒提告。諸如網路互罵而告誹謗、複製網路圖片被告違反《著作權法》、大樓管委會貼催繳管理費通知而被告違反《個資法》，不一而足。這些案件大多數不會被起訴，但檢察官卻須投入時間及精力偵查。</p><p>普遍存在的「濫訴」現象，不但使被訴者苦惱，更造成檢察官工作超量，非改不可。這篇報導並與近來不少基層檢察官的投書一致，建議為了遏止濫訴，讓檢察官能專注偵查重大犯罪，可仿效德國，將諸如誹謗等無關公益的微罪案件，改採自訴人須負擔費用的強制自訴（我國目前的自訴制度並未收費），藉費用負擔及強制律師代理來遏止「濫訴」，或者乾脆把這類無關公共利益的犯罪類型除罪化。</p><p>在漢文化裡，的確有悠久的以刑逼民傳統，但把提告誹謗、詐欺、背信、侵占這類侵害個人法益犯罪不成功的告訴人，一概稱為濫訴，則未免獨斷。案件最終被不起訴的理由，可能是所告情事在法律上顯不成罪，可能是微罪不舉，更多的是經偵查後認為罪證不足。無論何者，都是檢察官主觀判斷的結果。因此，以不起訴的結果作為濫訴的判準，等於是否濫訴全憑檢察官說了算。事實上，根本找不到判斷孰為濫訴的客觀標準。尤其檢察官負有偵查之責，要是因為檢察官怠於偵查，最後以罪證不足為由不起訴，卻可以反過來指責告訴人濫訴，等於是允許檢察官把責任推給告訴人，更是焉有是理。濫訴的說法背後其實是（告人）不成功便成仁的邏輯，與古代官府為了遏止民眾告狀所設的反坐之罰其實是同樣思維，目的都在阻擋民眾申告，以解決官署不堪負荷的問題。</p><p>因此，要想藉由遏止所謂濫訴來解決檢察官的工作超量問題，根本是搞錯了目標。司法體系是為了保障人民權利而設，若規定以上這些侵害個人法益的輕罪被害人一律只得自訴（而且要付費），這樣的司改恐怕只會激起更大民怨，而且只是把案件推給法院，根本是以鄰為壑，其實也與其所欲仿效的德國制度大相逕庭。德國的自訴雖然採取有償制，但並未規定特定犯罪的被害人只能提自訴。</p><p>德國值得借鏡之處，是檢察官的實務作業方式。雖然德國檢察官也是偵查主體，但體認到自己是法律專家，並無偵查專業及資源，可謂「有頭無手」，因此實務上偵查大部分還是移轉給警察主導。通常警察獨立偵辦犯罪，偵查告一段落後才將案件移送給檢察機關，檢察官只需決定起訴或不起訴。若認為警察的偵查尚未完備，則會再命警察補充蒐證。只有在極嚴重犯罪、商業犯罪或有組織犯罪等特殊情況下，檢察官才會以口頭指示的方式參與偵查。因此，德國檢察官原則上不訊問被告或證人，檢察機關內也沒有偵查庭的設置（若例外需要訊問，則在檢察官的辦公室內進行）。反觀我國，開偵查庭訊問被告及證人，耗費檢察官大部分的上班時間，比起德國，可謂極無效率的作法。</p><p>除了偵查庭，另一個無謂耗費檢察官精力與時間的工作，是引用卷證撰寫形式類似法院判決書的不起訴處分書。之所以像判決書，是因為《刑事訴訟法》賦予不起訴處分等同確定判決的實質確定力。德國的不起訴處分（EinstellungdesVerfahrens）沒有實質確定力，因此除表示中止偵查之決定外，不須有太多內容。也因檢察機關得隨時續行偵查，故不需設再議制度以決定不起訴處分得否確定。</p><p>如果仿效德國的作法，不但辦案的基層檢察官可以省下許多開偵查庭及製作處分書的時間，高檢署也因不須處理再議而可釋放人力回基層，解決迭有檢察官投書反應的人力短缺問題。這樣的改革，僅需更動檢察官的工作方式及修改《刑事訴訟法》，卻可避免限制人民訴訟權的罵名，也強過未能提出具體人力需求，卻可能造成組織肥大及嚴重財政負擔的增員計畫（有論者倡議增加檢察官或增設副檢察官），才是真正的省錢司改。</p><p>●尤伯祥，義謙法律事務所主持律師、台北律師公會第27屆常務理事、中華民國律師公會全國聯合會憲政改革研究委員會主任委員、財團法人民間司法改革基金會常務執行委員、財團法人法律扶助基金會專門委員。</p> #尤伯祥 #律師 #第三組 #濫訴 #檢察官過勞 #ETToday東森新聞雲 #2017-03-16
+
+# 林達
+## backgrounds
+- 檢察官
+
+## articles
+### 2017/03/17 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170317/1078167/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170317/1078167/" target="_blank">【司改交鋒】林達專欄：檢改序幕升起 自己的主任自己選</a></h2><p>林達／台北地檢署檢察官 </p><p>司改國是會議進入檢察機關改革的重要議程，在檢察機關組織改革的議題中，「檢察人事制度」攸關檢察體系晉升文化，而這個制度一直飽受議論，甚至被指責為濫權起訴（或包庇吃案）的問題根源之一。在上一次1998年司法改革浪潮下，將「檢察民主化」精神注入檢察人事機制，提升了檢察獨立與「檢察官自治」的價值。但是近十年的運作後，早已出現了許多新的問題，例如檢審委員的制度偏差與變質。在諸多人事晉升制度中，尤以地檢署主任檢察官的產生方式，更是檢察改革的核心議題。本次司法改革中，倘若邱太三部長能夠迎向歷史責任，放棄地檢署主任檢察官的「圈選權」，那將是檢察機關劃時代的進步，此舉足可載入檢察史冊！</p><p>晉升主任的候選人，都是檢方歷練十二到十五年的菁英骨幹，受各檢察長重用並接受指分各類重大矚目案件，如何從中拔擢優秀晉升主任，攸關激勵整體士氣、形塑正向競爭之檢察機關文化。目前的晉升選任有三階段：「地檢推薦」、「檢審委員初選」、「法務部長圈選」。近年來，在士檢蔡啟文檢察官等檢改成員的積極推動下，「地檢推薦」程序已經走向民主化，大多地檢已開放由檢察官票選推出。然而，後續「檢審委員初選」階段，則因為「民選」檢審委員「地域本位主義」的競爭與合作，以及「部長派」檢審委員、「總長派」檢審委員的聯合與妥協，這種共享權力的決策模式，也讓初選名單的產生，充滿了濃厚的人事角力。至於最後的「部長圈選」階段，則由法務部長一人壟斷，這個機制設計源於「民主問責」的概念，但同一概念的反面卻可能是「政治干預」，可能使法務部長的意志，透過人事權的鏈結，隱晦地影響了這一批菁英骨幹的個案偵辦。</p><p>由於「檢審委員初選」和「法務部長圈選」兩階段，性質上都是將各地候選人擺在同一個平台上的全國性海選，對於候選人適任性的調查，經常出現資訊落差。例如，在全國各方競逐的角力之下，檢審委員和法務部長所能得到的資訊來源，其實可以化約為：新聞、人脈、風評與黑函，與一般人民團體或政治選舉環境無異。可想而知，英雄主義、人情拜託、口碑耳語、爆料攻擊也是每年例行公事。優秀的候選人可能被傳言的不堪，不適任的候選人反而贏得讚賞。須知，跨出自己地檢署的全國海選，任何風評都會扭曲變形。在這種結構環境下，很多候選人只能努力讓自己紅，或至少避免變黑，人際關係也變得重要。最嚴重的扭曲可能是，長年不認真辦案，但是接近升遷時卻積極異常，幹一大票「豐功偉業」自己升官，留下爛攤給後人，外界批評濫權辦案的印象也可能源自於此。沒有檢察官喜歡這種環境，但是身處其中只能循此規則爬升，很多法官看不起檢察體系，其實肇因於此。</p><p>法院方面早在十餘年前，就已解決這個難題。各法院由法官投票選出領導自己的審判長，這是一個極佳的人事設計。在同一個地方法院的環境中，法官之間對於同僚有最深刻的認識，大家不會故意亂選人來領導自己，找自己麻煩。其實，專業群體自己推選產生的領導者，通常會依循該專業群體所認同的共同價值來選擇。以法官群體來說，他們會考慮審判獨立、法學素養、辦案態度、溝通協調等條件。就算，有新聞惡評或違紀事件，專業同儕團體可以自行評估其輕重，衡量適任與否。過度拉票，仰望上意的人也被同儕看在眼裡，公道自在人心。縱然，偶爾也難免有選錯的情況，但是，比起交由全國各地區派系車拚角力、上級長官和評選委員的人脈經營等種種扭曲，顯然錯誤率會降低許多。</p><p>法官有能力選出自己的審判長，檢察官當然也有能力選出自己的主任檢察官，沒道理檢察官比不上法官。有志擔任主任檢察官之人，必須依靠他多年的專業歷練與口碑風評，以及較佳的溝通協調能力，才有可能獲得同儕信賴而選上主任。那些專營人脈、好大喜功、逞一時英雄的人，自然比較難當選。況且，適任主任與否，標準因人而異。以往，有的部長認為辦案能力重要，有的部長認為溝通協調重要，但無論怎麼圈選，都是派往其他地檢擔任領導幹部，總未必符合當地檢察官之需求。再者，空降而來的主任檢察官常因背負上級垂青原罪，難以樹立威望，甚至被當地檢察官認為過客，種種因素都形成基層之間的虛耗與對立。其實，主任是要領導自己的，自己最知道誰最適合。天邊大老闆派來的，未必比較能帶動士氣，贏得領導威望更耗時。</p><p>不過值得一提的是，倘若法務部長放棄了主任圈選權，我建議檢審委員亦同步放棄其初選權。因為，部長圈選權和檢審委員會初選權其實可以看作一組配套。當檢審委員會在全國海選的車拚角力過度扭曲，導致初選名單出現異常時，法務部長可以進行最後的淘汰與調節。但是，倘若只有部長放棄圈選權，卻將所有名單都一概交由檢審委員會進行角力，則仍然是一種全國海選的資訊偏差環境，反倒是丟掉了整個系統的最後糾錯機制，導致整個升遷淪為民粹選舉式的競爭環境。在那樣跛腳的制度下，候選人檢察官仍然必須在新聞營造下的英雄主義、人情拜託、口碑耳語、爆料攻擊的環境下，勉力爬升或僥倖存活，而且，仍然不是當地自己選出自己認識的好人來當主管。因此，我建議，地檢署主任檢察官仿效法院審判長產生方式，由各該地檢署自行投票選出。</p><p>自己的主任自己選，是檢察官自治的制度保障。在我的博士論文「我國檢察機關組織改革之研究」中，認為檢察獨立與民主問責是相互制衡的價值（檢察體系的內與外），檢察一體則與檢察官自治是相互制衡的價值（檢察機關的上與下），這四個價值可以將檢察官的龐大權力進行橫向與縱向的分拆，透過分權制衡機制來避免上級的專擅，或下級的狂妄濫權。例如，檢察長書面指令化已經高喊二十年，但是在晉升主任的制度因素下，鮮少有人能要求檢察長下達書面指令。若主任一職由當地檢察官自治直接選出，其權力基礎來自於基層，當檢察官與檢察長意見不同時，自然比較能忠於「法律守護者」的角色進行辯論。當然，檢察長最後仍然可以行使「職務移轉權」，將案件交給其他（主任）檢察官承辦。假使，當所有（主任）檢察官都拒絕聽從指令時，檢察長將行使「職務收取權」，以自己檢察官的身分起訴（或不起訴）。檢察長和檢察官的權力將會有互相制衡的效果，並且讓書面指令化得以實現。</p><p>當然，這個制度有幾個配套。第一、主任檢察官均由當地選任產生，外調情況不再發生，此點與法官相同，目前已外調的主任應給予緩衝年限讓其回到駐地。第二、主任的任期可以縮短，例如以兩年一任，可連選連任。第三、主任既是票選產生，已有相當威望，與審判長相同都是服務性質，其更具有團結協同辦案的號召力，自然可以減少分案，專務於領導與監督。第四、各地檢因人數、規模、業務性質有所不同，以及為保有檢察長一定程度的指令權，可斟酌採用：一、完全由檢察官直接票選式，二、直選後呈交檢察長遴選之兩階段式，三、完全由檢察長遴選式。目前在地方法院系統，各地院也呈現面貌不同的審判長產生方式，這都是在法官會議下，法官自治精神的展現，這也是檢察官會議可以仿效進行的。</p><p>上一次發生於1998年的司法改革，催生了檢察人事制度的檢察民主化機制。此次司法改革，我們期盼能發生更深刻的檢察人事改革。檢察獨立不能只是口號，它需要制度性的保障，以及矢志捍衛檢察獨立的檢察官文化。</p><p>1988年轟動一時的「吳蘇案」，是檢察長對檢察官下達不當指令權的歷史性案例，多位極有風骨的檢察官為捍衛檢察獨立悍然辭職，當年新竹地檢署邱太三檢察官亦是其中一員。昔日的邱檢察官已成今日的法務部長，因緣際會竟又再次站上司法改革的風口浪尖。這可能是一次錯過再等二十年的歷史機遇，竟又遇上曾深刻經歷政治干預年代慘痛教訓的法務部長，在歷任部長都難以割捨的人事權力魔戒下，倘若邱部長願意領銜放下人事「圈選權」，率先建立捍衛檢察獨立的人事制度，將檢察獨立的信念與文化烙印傳承下去，讓檢察官能忠誠信守「法律守護人」的角色，這將會是我輩有幸共同見證二次檢察改革的光榮時刻。</p><p>更多林達文章</p> #林達 #檢察官 #檢察官人事 #蘋果日報 #2017-03-17
+
+# 林鈺雄
+## backgrounds
+- 學者
+
+## articles
+### 2017/03/17 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170317/1077856/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170317/1077856/" target="_blank">【司改交鋒】林鈺雄：當行政官化成為事實 洩密就是義務！？</a></h2><p>林鈺雄／台灣大學法律學院教授、刑事法研究會執行長、司改國是會議委員</p><p>日前，北檢起訴前總統馬英九涉嫌（教唆）洩密案。在馬黃洩密事件中，以黃世銘（前檢察總長）為被告的案件，洩密事實經高院查證屬實，於2015年2月判刑確定；此次以馬英九為被告的（對江宜樺、羅智強）洩密案（2013年8月31日）及教唆黃世銘向江洩密案（2013年9月4日），係因馬總統任內追訴豁免特權（《憲法》第52條）之故，在馬卸任後始重啟偵查、終結後起訴。此醜聞當初糾纏著司法關說、偵查洩密和行政干預司法等疑雲，是馬政府時期人民對司法信賴崩盤的關鍵及導致後續政黨輪替的轉捩點。</p><p>前黃、後馬兩案由於本屬馬王政爭的同一串事件，諸多法律爭點也有共通性，除何謂「秘密（同一性）」外，檢、辯攻防另一重心在於「檢察官定位（含總長）」。無獨有偶，目前如火如荼進行中的司改國是會議，「檢察官應改為行政官」正是一個喧鬧紛擾的「改革」（？）議題。溫故知新，不妨看看當初黃案關於檢察官定位的攻防史。</p><p>先岔個話，我出給法律系學生的實例題考卷，最後一句常是：如果您是檢察官，您會如何主張？如果您是辯護人，您要如何抗辯？直接了當地問：小檢察官斗膽起訴（上級）黃總長，理由認為檢察官具有司法官屬性，總統、行政院長都不是檢察官或檢察總長的「上級」長官，故黃夜奔馬透露偵案構成洩密罪。那麼，如果您是黃的辯護人（黃可是選任王清峰、王如玄兩位「前部長級」律師，陣仗浩大），當「洩密」成為事實難以否認時，要如何使出渾身解數，替被告辯護呢？</p><p>一言以蔽之，就是徹底主張「檢察官是上下一體的行政官」，以貫通總統介入偵查中個案的任督二脈，據此導出總長向總統報告重大偵查中案情的義務；既然總長僅是向總統履行職務上的合法義務，是「非常盡責的作法，如何談得上向總統洩密呢？」，反而應「向總長致以敬意」才是大是大非的表現；羅織為洩密罪豈非「光天化日 陷人於罪」呢？（中研院胡佛院士，2014年1月7日《中時》時論）。繞個口令說，就是：「當行政官化成為事實，洩密就是義務」！</p><p>等等！你可能會困惑，考卷寫這種驚世駭俗的答案，學生不會被當掉嗎？別急！老師要打分數要看推論，不能只看結論（如果把鄭文龍律師名言「結論不對 理由如垃圾」當作評分基準，法律系老師大概就等著被申訴吧！）。答案卷理由是這樣寫的：「我國的法制，在審檢分立後，檢察體系更明確地專屬於行政權的管轄，而在職權的行使上，則採行所謂的『檢察一體』」。審、檢不但要徹底分家，以達成「檢察一體，包括總統在內」的憲政目標；而行政官化後的檢察體系，成為「行政一體」科層體系的一環，是以「總統對檢察總長的指揮監督是體制內的職權互動關係」，總長當然要向掌握最高行政權的總統「負政策執行的責任」，尤其是「在確認案情後，立即向總統提出報告，並接受總統的諮詢」的義務（胡佛語）。這考卷，你說要打幾分呢？</p><p>律師笑話大全中有一則被告偷牛故事，辯護意旨是宣稱「被告明明牽的（只）是一條繩子」。辯護律師極力替被告脫罪，引用了以上在法學界幾乎是沒有賣點的見解（胡佛院士是政治學者），作為有利被告的辯詞並附卷為證，縱使黔驢技窮，也無可厚非。</p><p>因此，黃案雖「經被告及其辯護人以刑事答辯狀將上開書面資料之法律意見涵攝本案之事實進行辯護」（台高院103矚上易1），但高院合議庭法官可是「專業過半」，依法當然是全都不採；縱使在陳師孟們口中「黨國餘孽、司法敗類」橫行的馬政府時代，黃總長還是被判處洩密罪刑定讞並已執行完畢。</p><p>鑒往知來，那馬英九不就沒戲唱了嗎？不，難說！暫且不論兩案雖相牽連，但案情、爭點總有多少不同。詭譎的是，政黨輪替後，「專業不過半」的司改會議大戲，道消魔長，又替馬英九搭起舞台，把當初曾是糖衣毒藥的「檢察官行政官化」，以「人民司改」的包裝，重新上市銷售。你也不吃這一套？小心被扣上「反改革」的大帽子，瞬間在同溫層的社群網上被公審！</p><p>藍綠翻盤後，髮夾彎蔚為時尚。太陽花世代們，也來一起學繞新口令吧：「當洩密成為事實，行政官化就是義務！」</p> #林鈺雄 #學者 #第三組 #檢察官定位 #蘋果日報 #2017-03-17
+
+# 呂秋遠
+## backgrounds
+- 律師
+
+## articles
+### 2017/03/17 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170317/1077860
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170317/1077860" target="_blank">【司改交鋒】呂秋遠專欄：法庭直播OK 但優先順序錯了</a></h2><p>呂秋遠／律師</p><p>司法改革國是會議第四分組日前做出決議，要求司法院研擬「大法官憲法法庭、最高法院及最高行政法院進行言詞辯論時，應予直播，並建議將選舉案、貪瀆案、食品安全、環境保護等重大案件的事實審部分，也納入直播的範圍中」，此提案引起正反兩面的意見。</p><p>所謂的「公開審判」，原本就是指審理與裁判必須在不特定且相當數量者得以自由旁聽的情況下進行，不僅必須賦予訴訟關係人在審理階段參與的機會，也必須向一般人民公開。因此，現行制度下，除少數性侵害及家事案件因涉及當事人隱私，因此不對外開放民眾旁聽外，其他案件多開放民眾得自由進出法庭旁聽，以保障公開審判的基本原則。</p><p>在現行科技進步的情況下，第四分組做出決議，要求事實審法院在審理部分案件時，納入直播範圍，是進一步落實公開審判的原則，值得司法院研擬相關辦法，俾使民眾可以更了解法院在審理過程中所扮演的角色。</p><p>公開審判原則，除了讓當事人的權益可以保障外，部分倡議者其實是因為少數法官、檢察官於審理時，對於當事人的審理態度不佳，也因此產生當事人對於司法的不信任。如果可以直播，對於主導案件審理者的法官，當可有部分的約束力，畢竟即便是公開審理，除了少數矚目案件外，法院的旁聽席往往冷冷清清，鮮少有民眾願意為了了解某些與自己不相關的案件，而前往法院旁聽。當旁聽席根本沒人，或許就有少數法官會態度上比較沒有考慮到當事人的心情，進一步影響這些當事人對於司法的信賴。如果開放直播，或許會有一些提醒的作用。</p><p>因此，直播的方向值得肯定，畢竟這種直播並不是如同臉書上的直播，而應該稱之為「現場轉播」，民眾並無法發表評論，只是像親臨旁聽席一樣，聆聽現場的審理狀況，對於司法的干擾，如果公開審理的原則值得肯定，就沒有理由反對直播的進行。不過，直播的問題，不在於理念，而在於技術面，也就是這次的改革方向，與想要處理的問題，恐怕背道而馳。</p><p>就提案而言，或許是礙於技術與人力的不足，因此主要還是在重大的選舉、貪瀆、環保、食安等案件審理時，才有直播的可能。然而，這些案件因為犯罪情節重大，大部分的被告都有選任辯護人，極少數沒有委任辯護人的被告，也都有公設辯護人或是法律扶助基金會的律師幫忙辯護。事實上，在這些案件裡，與其他的案件相較，程序受到保障的程度最高，不僅是法官、檢察官的言行都受到媒體注目，律師的表現當然也會直接影響到當事人的評價。這部分的直播，反而不應該是優先處理的目標。</p><p>要優先處理的標的，反而是那些不受人注目的案件。例如拾荒老人不慎取走別人的紙箱，因此被告竊盜，拾荒老人對於法官宣讀的相關權利，可能根本不懂，而需要請求調查的證據，也不知如何說起，甚至連和解都不知道怎麼進行。而處理這些類型案件的法官，如果真能耐心的以中立角度處理，是這些被告或是告訴人的福氣，然而當事人並非都有這種運氣。如果有直播，而且優先關心這些「沒有律師的庶民小案件」，對於直播所希望改變與監督的現象，應該更有幫助。</p><p>是以，直播對於公開審理而言，是一個重大技術上的突破，然而如果真要有優先順序，請重視這些不知名的案件，讓參與的所有當事人，都可以有更好的監督與保障，這或許是公開審理原則的重要初衷。</p><p>更多呂秋遠文章</p> #呂秋遠 #律師 #第四組 #法庭直播 #蘋果日報 #2017-03-17
+
+# 楊永年
+## backgrounds
+- 學者
+
+## articles
+### 2017/03/17 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170317/1077978/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170317/1077978/" target="_blank">【司改交鋒】楊永年專欄：政治關說應有清楚界定</a></h2><p>楊永年／成功大學政治系暨政治經濟研究所教授、司改國是會議委員</p><p>馬前總統洩密案再度引發政治關說的疑雲，「洩密案」的兩位當事人均被起訴，其中一位並已被法院判刑確定。另一方面，檢察體系行政官員方面，從當時的法務長、檢察總長、最高檢察署檢察長均相繼去職。理論上，這是相當嚴重的「政治關說」案件。然而，什麼是政治關說，卻一直沒被清楚定義。</p><p>有法界人士認為，政治關說「無法可管」，所以無法針對政治關說進行偵查，而洩密罪卻有明文規定與罰則，因此僅能針對這部分進行處理。若然，我們更應該好好思考與界定，什麼是政治關說。而如果我們（政府）不去界定政治關說，可能造成以下嚴重後果： </p><p>一、政治黑手可能隨時介入司法：如果「政治關說」議題不被重視或討論，等於暗示或明示，「政治關說」可以被接受或認同，不只法律認同，同時獲得社會文化的認同。因為政治關說未被界定，未來政治關說將會更無限上綱，甚至鋪天蓋地而來。或者，政治關說在被默許之下，將導致政治獨大，可能會演變成政治恐嚇與追殺；若與黑道結合，則將變成政治暴力，於是成為黑道治國。</p><p>二、將成貪瀆溫床：其實大家都知道，從中央到地方，政治關說本來就相當嚴重。可以說，目前台灣（地方）政治，其實就籠罩在政治關說的文化中，例如環境（含空氣）污染那麼嚴重，主管機關失能是關鍵因素，但背後的政治關說與壓力，才是讓主管機關失能的主要因素。或可以說，政治關說就是貪瀆的溫床，因為背後代表著龐大的政治與經濟利益。最簡單的邏輯是，企業可以買通政治，再透過關說使其違法行為可以不受處罰。</p><p>三、司法體系將被腐蝕：理論上，司法（含檢察）體系係獨立於立法與行政。如果這時候司法體系不出來界定清楚什麼是政治關說，將注定司法體系會再被腐蝕。合理的推論是，司法獨立或不獨立，本案絕對是指標案件。釐清什麼是政治關說，目的不在追究那位政治人物有什麼問題，而在確保司法可以獨立於政治之外。甚至，從這起案例的發展，檢察官只談洩密，不談政治關說，其實是把檢察官「行政官」化。因為，這也隱含檢察官（或檢察體系）不敢碰觸敏感的「政治關說」。 </p><p>不久前，司法改革國是會議第二分組，增列政治關說為重大議題，並列入討論。而本案提供活生生的案例教材，值得好好檢討，並界定清楚，什麼是政治關說。因為本案不只衝擊司法的獨立性，若不定義清楚，司法可能隨時遭到干預。本案也同時衝擊「檢察官定位」與「法官定位」，因為對於本案的偵查、起訴、審判過程，絕對會受到社會大眾的檢視。檢察官與法官的一舉一動，不只牽動司法官核心的角色定位，也對整體司法體系運作有深遠影響。或可以說，本案會是司法體系的指標性案例，現在或未來都會被「放大檢視」。</p> #楊永年 #學者 #第二組 #司法官貪汙 #司法獨立 #蘋果日報 #2017-03-17
 
 
 
@@ -1950,11 +1982,11 @@ ___
 - 作者
   - 法官
     - 蔡志宏
+    - 時瑋辰
     - 蔡嘉裕
     - 王子榮
     - 張淵森
     - 孫健智
-    - 時瑋辰
     - 概革
     - 林臻嫺
     - 簡祥紋
@@ -2027,6 +2059,7 @@ ___
     - 俞百羽
     - 洪國華
     - 尤伯祥
+    - 呂秋遠
   - 學者
     - 李念祖
     - 李復甸
@@ -2047,7 +2080,6 @@ ___
   - 其他
     - 蔣念祖
     - 林瑋婷
-    - 時瑋辰
     - 林上祚
     - 邱風
     - 林雨蒼
@@ -2083,6 +2115,7 @@ ___
     - 邱梓毓
     - 高克培
     - 黎家維
+    - 劉一德
     - 盧禮賓
     - 李商
     - 張娟芬
@@ -2281,4 +2314,5 @@ ___
   - 2017-03-14
   - 2017-03-15
   - 2017-03-16
+  - 2017-03-17
 
