--- a/md/總統府司法改革國是會議相關投書彙整.md
+++ b/md/總統府司法改革國是會議相關投書彙整.md
@@ -1954,7 +1954,7 @@
 
 ## articles
 ### 2017/03/16 GMT0+8:00 http://www.ettoday.net/news/20170316/885072.htm
-- <h2><a href="http://www.ettoday.net/news/20170316/885072.htm" target="_blank">尤伯祥／省錢司改，跟著德國這樣做就對了！</a></h2> #尤伯祥 #律師 #第三組 #濫訴 #檢察官過勞 #ETToday東森新聞雲 #2017-03-16
+- <h2><a href="http://www.ettoday.net/news/20170316/885072.htm" target="_blank">尤伯祥／省錢司改，跟著德國這樣做就對了！</a></h2><p>▲為解決檢察官人力荒，達到省錢司改，可仿效德國的做法。（Photo by gil4r56y／Flicker／示意圖）</p><p>根據中時電子報106年3月13日〈防濫訴學德國無關公益轉自訴〉的報導，由於現行的告訴制度免費，於是好訟之徒動輒提告。諸如網路互罵而告誹謗、複製網路圖片被告違反《著作權法》、大樓管委會貼催繳管理費通知而被告違反《個資法》，不一而足。這些案件大多數不會被起訴，但檢察官卻須投入時間及精力偵查。</p><p>普遍存在的「濫訴」現象，不但使被訴者苦惱，更造成檢察官工作超量，非改不可。這篇報導並與近來不少基層檢察官的投書一致，建議為了遏止濫訴，讓檢察官能專注偵查重大犯罪，可仿效德國，將諸如誹謗等無關公益的微罪案件，改採自訴人須負擔費用的強制自訴（我國目前的自訴制度並未收費），藉費用負擔及強制律師代理來遏止「濫訴」，或者乾脆把這類無關公共利益的犯罪類型除罪化。</p><p>在漢文化裡，的確有悠久的以刑逼民傳統，但把提告誹謗、詐欺、背信、侵占這類侵害個人法益犯罪不成功的告訴人，一概稱為濫訴，則未免獨斷。案件最終被不起訴的理由，可能是所告情事在法律上顯不成罪，可能是微罪不舉，更多的是經偵查後認為罪證不足。無論何者，都是檢察官主觀判斷的結果。因此，以不起訴的結果作為濫訴的判準，等於是否濫訴全憑檢察官說了算。事實上，根本找不到判斷孰為濫訴的客觀標準。尤其檢察官負有偵查之責，要是因為檢察官怠於偵查，最後以罪證不足為由不起訴，卻可以反過來指責告訴人濫訴，等於是允許檢察官把責任推給告訴人，更是焉有是理。濫訴的說法背後其實是（告人）不成功便成仁的邏輯，與古代官府為了遏止民眾告狀所設的反坐之罰其實是同樣思維，目的都在阻擋民眾申告，以解決官署不堪負荷的問題。</p><p>因此，要想藉由遏止所謂濫訴來解決檢察官的工作超量問題，根本是搞錯了目標。司法體系是為了保障人民權利而設，若規定以上這些侵害個人法益的輕罪被害人一律只得自訴（而且要付費），這樣的司改恐怕只會激起更大民怨，而且只是把案件推給法院，根本是以鄰為壑，其實也與其所欲仿效的德國制度大相逕庭。德國的自訴雖然採取有償制，但並未規定特定犯罪的被害人只能提自訴。</p><p>德國值得借鏡之處，是檢察官的實務作業方式。雖然德國檢察官也是偵查主體，但體認到自己是法律專家，並無偵查專業及資源，可謂「有頭無手」，因此實務上偵查大部分還是移轉給警察主導。通常警察獨立偵辦犯罪，偵查告一段落後才將案件移送給檢察機關，檢察官只需決定起訴或不起訴。若認為警察的偵查尚未完備，則會再命警察補充蒐證。只有在極嚴重犯罪、商業犯罪或有組織犯罪等特殊情況下，檢察官才會以口頭指示的方式參與偵查。因此，德國檢察官原則上不訊問被告或證人，檢察機關內也沒有偵查庭的設置（若例外需要訊問，則在檢察官的辦公室內進行）。反觀我國，開偵查庭訊問被告及證人，耗費檢察官大部分的上班時間，比起德國，可謂極無效率的作法。</p><p>除了偵查庭，另一個無謂耗費檢察官精力與時間的工作，是引用卷證撰寫形式類似法院判決書的不起訴處分書。之所以像判決書，是因為《刑事訴訟法》賦予不起訴處分等同確定判決的實質確定力。德國的不起訴處分（EinstellungdesVerfahrens）沒有實質確定力，因此除表示中止偵查之決定外，不須有太多內容。也因檢察機關得隨時續行偵查，故不需設再議制度以決定不起訴處分得否確定。</p><p>如果仿效德國的作法，不但辦案的基層檢察官可以省下許多開偵查庭及製作處分書的時間，高檢署也因不須處理再議而可釋放人力回基層，解決迭有檢察官投書反應的人力短缺問題。這樣的改革，僅需更動檢察官的工作方式及修改《刑事訴訟法》，卻可避免限制人民訴訟權的罵名，也強過未能提出具體人力需求，卻可能造成組織肥大及嚴重財政負擔的增員計畫（有論者倡議增加檢察官或增設副檢察官），才是真正的省錢司改。</p><p>●尤伯祥，義謙法律事務所主持律師、台北律師公會第27屆常務理事、中華民國律師公會全國聯合會憲政改革研究委員會主任委員、財團法人民間司法改革基金會常務執行委員、財團法人法律扶助基金會專門委員。</p> #尤伯祥 #律師 #第三組 #濫訴 #檢察官過勞 #ETToday東森新聞雲 #2017-03-16
 
 # 林達
 ## backgrounds
@@ -2054,11 +2054,11 @@
 
 # 林志忠
 ## backgrounds
-- 法官
+- 律師
 
 ## articles
 ### 2017/03/20 GMT0+8:00 http://www.ettoday.net/news/20170320/886586.htm
-- <h2><a href="http://www.ettoday.net/news/20170320/886586.htm" target="_blank">林志忠／辦案請閉嘴！從馬案看偵查不公開</a></h2><p>▲馬英九洩密案偵辦過程，媒體緊追不捨，北檢的態度一概不予回應，對於案情守口如瓶。</p><p>3月13日台北地檢署檢察官起訴前總統馬英九洩密等罪嫌（以下稱馬案），引起媒體廣泛討論，其中大部分意見是關於此案將來可能判有罪或無罪、此案對檢察官定位的影響、此案在憲法機關權力分立的意義，乃至此案起訴在台灣民主政治發展上的價值等問題的探討。我對此案的關心是，密切觀察這個案件在檢察官集體偵辦過程中的媒體效應。</p><p>馬案偵辦過程，媒體追查、報導、批判的力道不小，熱度不減，畢竟被告身分貴為前總統，案件受到大眾矚目及檢視，理所當然。值得注意的是，無論媒體如何批評北檢（其中最常見到的批評是說北檢偵辦馬案牛步化），北檢的態度一概不予回應，對於案情則是守口如瓶。北檢這樣謹言慎行、嚴守分際的態度與風格，對比2008年間特偵組檢察官偵辦扁案過程中，集體在媒體記者會前排成一列矢志辦倒阿扁，否則辭職下台，其後媒體對於扁案偵查案情、偵蒐證據、偵辦進度的報導無日無之、如影隨形的情況，真是不可「同日而語」，使我有仿如隔世之感。我的非法律圈的朋友還打電話來消遣我：「北檢態度如此封閉，有沒有違法？」</p><p>刑事訴訟法第245條第1項規定：「偵查，不公開之。」是為「偵查不公開原則」。同條第3項規定：「檢察官、檢察事務官、司法警察官、司法警察、辯護人、告訴代理人或其他於偵查程序依法執行職務之人員，除依法令或為維護公共利益或保護合法權益有必要者外，偵查中因執行職務知悉之事項，不得公開或揭露予執行法定職務必要範圍以外之人。」為什麼立法上要明文規定「偵查不公開原則」呢？從被告一方來說，案件尚在偵查階段，被告究竟有無涉嫌犯罪，極不明確，倘將偵查內容或告訴事實洩露予媒體，經過媒體大肆報導，社會大眾極易形成「被告犯罪」的印象，對被告個人名譽必有傷害；又縱使檢察官偵結後起訴被告，由於之前已有媒體廣泛報導，恐將影響法院形成「輿論審判」之虞。就偵查一方而言，偵辦內容外洩，可能引起在逃共犯的警覺、案情有關的證人受到騷擾、案件被害人受到威脅，因而招致妨礙偵查程序或結果之現象，如此必將增加偵查人員辦案的困難與阻礙，甚至可能導致犯罪嫌疑人或被告逍遙法外。因此，我有很多擔任檢察官的朋友們曾經告訴我：「偵查案件，最怕大嘴巴！」也因此，每次看到「檢、調人員強調……」、「根據檢、警人員的說法……」、「法醫說……」、「警方表示今日將……」、「檢方告知已鎖定……」等等報導，我就覺得不可思議，檢、調、警、法醫真的這樣說嗎？偵查不公開原則還存在嗎？偵辦案件的倫理規範放在哪裡呢？</p><p>偵查不公開原則是否很難執行呢？這個原則與民眾「知的權利」是否衝突呢？刑事訴訟法第245條第3項的除外規定：「為維護公共利益或保護合法權益有必要者」，太過抽象，是造成偵查不公開原則大開漏洞的原因。但是，從馬案偵辦過程我們可以發現，堅守「偵查不公開原則」不是做不到的事。那麼，為何每次發生社會矚目案件或重大刑案時，偵查不公開原則就會被偵辦人員拋諸腦後，使得媒體對於案情或偵辦內容可以大肆報導呢？其實這與偵辦人員的心態有關，與「維護公共利益或保護合法權益」實在扯不上什麼關係。</p><p>最後，在此引述一位日本記者於1987年5月間採訪東京地檢署特搜部（與台灣之前不久才被廢除的特偵組類似）的記錄供各位做個參考：「……而使我更驚訝的是限制採訪的嚴格，我們不許與第一線的檢察官接觸，如有違反，將被禁止出入檢察廳。檢察官如對媒體洩露情報，將遭到降職的處分，能夠見面的只有特搜部部長和三個副部長。」（魚住昭著，陳鵬仁譯，《戰後日本三大政治弊案》，原書名《特搜檢察》，2004年3月，商務出版，第1頁）。日本在30年前就如此嚴格地維護「偵查不公開原則」，而我們究竟做了什麼？他山之石，可以攻錯，我想，法務部長、警政署長與偵查人員是要加油了。</p><p>●林志忠，旭成國際法律事務所所長、總統府司改國是會議第二分組委員、民間司改會常執、冤獄平反協會監事，曾任地院法官、台中律師公會理事長。</p> #林志忠 #法官 #第一組 #偵查不公開 #ETToday東森新聞雲 #2017-03-20
+- <h2><a href="http://www.ettoday.net/news/20170320/886586.htm" target="_blank">林志忠／辦案請閉嘴！從馬案看偵查不公開</a></h2><p>▲馬英九洩密案偵辦過程，媒體緊追不捨，北檢的態度一概不予回應，對於案情守口如瓶。</p><p>3月13日台北地檢署檢察官起訴前總統馬英九洩密等罪嫌（以下稱馬案），引起媒體廣泛討論，其中大部分意見是關於此案將來可能判有罪或無罪、此案對檢察官定位的影響、此案在憲法機關權力分立的意義，乃至此案起訴在台灣民主政治發展上的價值等問題的探討。我對此案的關心是，密切觀察這個案件在檢察官集體偵辦過程中的媒體效應。</p><p>馬案偵辦過程，媒體追查、報導、批判的力道不小，熱度不減，畢竟被告身分貴為前總統，案件受到大眾矚目及檢視，理所當然。值得注意的是，無論媒體如何批評北檢（其中最常見到的批評是說北檢偵辦馬案牛步化），北檢的態度一概不予回應，對於案情則是守口如瓶。北檢這樣謹言慎行、嚴守分際的態度與風格，對比2008年間特偵組檢察官偵辦扁案過程中，集體在媒體記者會前排成一列矢志辦倒阿扁，否則辭職下台，其後媒體對於扁案偵查案情、偵蒐證據、偵辦進度的報導無日無之、如影隨形的情況，真是不可「同日而語」，使我有仿如隔世之感。我的非法律圈的朋友還打電話來消遣我：「北檢態度如此封閉，有沒有違法？」</p><p>刑事訴訟法第245條第1項規定：「偵查，不公開之。」是為「偵查不公開原則」。同條第3項規定：「檢察官、檢察事務官、司法警察官、司法警察、辯護人、告訴代理人或其他於偵查程序依法執行職務之人員，除依法令或為維護公共利益或保護合法權益有必要者外，偵查中因執行職務知悉之事項，不得公開或揭露予執行法定職務必要範圍以外之人。」為什麼立法上要明文規定「偵查不公開原則」呢？從被告一方來說，案件尚在偵查階段，被告究竟有無涉嫌犯罪，極不明確，倘將偵查內容或告訴事實洩露予媒體，經過媒體大肆報導，社會大眾極易形成「被告犯罪」的印象，對被告個人名譽必有傷害；又縱使檢察官偵結後起訴被告，由於之前已有媒體廣泛報導，恐將影響法院形成「輿論審判」之虞。就偵查一方而言，偵辦內容外洩，可能引起在逃共犯的警覺、案情有關的證人受到騷擾、案件被害人受到威脅，因而招致妨礙偵查程序或結果之現象，如此必將增加偵查人員辦案的困難與阻礙，甚至可能導致犯罪嫌疑人或被告逍遙法外。因此，我有很多擔任檢察官的朋友們曾經告訴我：「偵查案件，最怕大嘴巴！」也因此，每次看到「檢、調人員強調……」、「根據檢、警人員的說法……」、「法醫說……」、「警方表示今日將……」、「檢方告知已鎖定……」等等報導，我就覺得不可思議，檢、調、警、法醫真的這樣說嗎？偵查不公開原則還存在嗎？偵辦案件的倫理規範放在哪裡呢？</p><p>偵查不公開原則是否很難執行呢？這個原則與民眾「知的權利」是否衝突呢？刑事訴訟法第245條第3項的除外規定：「為維護公共利益或保護合法權益有必要者」，太過抽象，是造成偵查不公開原則大開漏洞的原因。但是，從馬案偵辦過程我們可以發現，堅守「偵查不公開原則」不是做不到的事。那麼，為何每次發生社會矚目案件或重大刑案時，偵查不公開原則就會被偵辦人員拋諸腦後，使得媒體對於案情或偵辦內容可以大肆報導呢？其實這與偵辦人員的心態有關，與「維護公共利益或保護合法權益」實在扯不上什麼關係。</p><p>最後，在此引述一位日本記者於1987年5月間採訪東京地檢署特搜部（與台灣之前不久才被廢除的特偵組類似）的記錄供各位做個參考：「……而使我更驚訝的是限制採訪的嚴格，我們不許與第一線的檢察官接觸，如有違反，將被禁止出入檢察廳。檢察官如對媒體洩露情報，將遭到降職的處分，能夠見面的只有特搜部部長和三個副部長。」（魚住昭著，陳鵬仁譯，《戰後日本三大政治弊案》，原書名《特搜檢察》，2004年3月，商務出版，第1頁）。日本在30年前就如此嚴格地維護「偵查不公開原則」，而我們究竟做了什麼？他山之石，可以攻錯，我想，法務部長、警政署長與偵查人員是要加油了。</p><p>●林志忠，旭成國際法律事務所所長、總統府司改國是會議第二分組委員、民間司改會常執、冤獄平反協會監事，曾任地院法官、台中律師公會理事長。</p> #林志忠 #律師 #第一組 #偵查不公開 #ETToday東森新聞雲 #2017-03-20
 
 # 蘇友辰
 ## backgrounds
@@ -2116,7 +2116,6 @@ ___
     - 林奕宏
     - 蕭淳尹
     - 黃祿芳
-    - 林志忠
   - 檢察官
     - 法操 FOLLAW
     - 陳瑞仁
@@ -2180,6 +2179,7 @@ ___
     - 呂秋遠
     - 周宇修
     - 卓心雅
+    - 林志忠
     - 蘇友辰
   - 學者
     - 李念祖
